# University

./: .gitattributes  .gitignore  .gitmodules  Lab02_Entorno.xlsx  README.md  binance_data_downloader.py
1/: README.md
1/EstructuraDatos/Huffman-Codification/: .hintrc  CMakeLists.txt  Readme.md
1/EstructuraDatos/Huffman-Codification/src/: HuffmanTree.cpp  HuffmanTree.h
1º/: README.md
3/AdvancedAutomaticLearning/: DFM_Spiral.ipynb  Practice1.ipynb  Practice1.py  pyproject.toml
3/AdvancedAutomaticLearning/Sesion3/: perceptron.py
3/AdvancedAutomaticLearning/Sesion4/: cifar10_tutorial.py  cifar10_tutorial_keras.py  rnn_keras.py
3/AdvancedAutomaticLearning/fashion/: requirements.txt
3/AdvancedAutomaticLearning/fashion/latex/: MNIST.aux  MNIST.fdb_latexmk  MNIST.fls  MNIST.tex  references.bib
3/AdvancedAutomaticLearning/fashion/mnist-cnn/: utils.py
3/AdvancedAutomaticLearning/fashion/mnist-cnn/data/models/: fashion_mnist_model.h5  fashion_mnist_model.onnx
3/AdvancedAutomaticLearning/fashion/mnist-cnn/models/: cnn_train.py  onnx_export.py
3/AdvancedAutomaticLearning/fashion/mnist-cnn/src/: data_loader.py  opencv.py
3/AdvancedAutomaticLearning/genetic_tsp/: TSP_Genetic_Algorithm for class.ipynb
3/AdvancedAutomaticLearning/overfitting/: overfitting.aux  overfitting.fdb_latexmk  overfitting.fls  overfitting.tex
3/AdvancedAutomaticLearning/sesion10/: TSP_Genetic_Algorithm for class.ipynb
3/AdvancedAutomaticLearning/sesion11/: PSO.ipynb  vonNeumann.py
3/AdvancedAutomaticLearning/sesion6/: bandits.py  tictactoe.py
3/AdvancedAutomaticLearning/sesion7/: exercice1.ipynb  exercice2.ipynb
3/AdvancedAutomaticLearning/sesion8/: assignment.fdb_latexmk  assignment.tex  references.bib
3/AdvancedAutomaticLearning/sesion9/: hill_climb_rf.py  steppest_ascent_hill.py
3/AdvancedAutomaticLearning/session8/: A3C.ipynb  assignment.fls  assignment.tex
3/ArquitecturaSoftware/proyecto/: .env  AUTH.md  ENCRYPT.md  HTTPRequests.md  README.md  Setup.md  TEST.md  check_env.py  postgres.md  pyproject.toml
3/ArquitecturaSoftware/proyecto/.hypothesis/tmp/: tmp00nun2su  tmp0hdap348  tmp0nvjgona  tmp29ikvt4a  tmp2_ueoac9  tmp2ucpml91  tmp4tlvw72o  tmp6efxk661  tmp78fpreoa  tmp7_0_lxol  tmp7sx2wof6  tmp8kjwwecm  tmp_6x7aub9  tmp_72bid0z  tmp_hgol005  tmpa27re7_w  tmpao0azkva  tmpb5nki135  tmpbe215_gu  tmpbluasbf6  tmpcgl8_naa  tmpcy_6uhfu  tmpded5y33h  tmpepu865qp  tmpf21a0i_p  tmphb1ifhco  tmpjt95i8wl  tmpkdlhgjqd  tmpkn4xb14g  tmplj5060dh  tmpn1432vm9  tmpn25s8c0z  tmpnoy4_rqr  tmpo2l_rb6x  tmpog7v9jdm  tmpp4e2_5ff  tmpq3bq2o9l  tmpqtitlppw  tmps69iw6jk  tmpslpknpox  (+7 more)
3/ArquitecturaSoftware/proyecto/app/: main.py
3/ArquitecturaSoftware/proyecto/app/api/: routes_salas.py  routes_users.py
3/ArquitecturaSoftware/proyecto/app/core/: config.py  database.py
3/ArquitecturaSoftware/proyecto/app/db/: database.py  migrate.py  models.py  session.py
3/ArquitecturaSoftware/proyecto/app/schemas/: administrador.py  empleado.py  empresa.py  sala.py  superusuario.py  token.py  usuario.py
3/ArquitecturaSoftware/proyecto/app/services/: empresa_service.py  sala_service.py  usuario_service.py
3/ArquitecturaSoftware/proyecto/app/token/: generate_key.py  jwt.py
3/ArquitecturaSoftware/proyecto/app/utils/: crypto_utils.py  fecha_utils.py  numeric_utils.py  string_utils.py
3/ArquitecturaSoftware/proyecto/tests/: conftest.py  test_crypto.py  test_main.py  test_usuario.py  test_utils.py
3/ArquitecturaSoftware/proyecto/tests/auth/: test_login.ps1  test_register.ps1  test_user.ps1
3/AutomatizacionRobotizacion/Niryo/: Readme.md  pyproject.toml  requirements.txt
3/AutomatizacionRobotizacion/Niryo/ned2/: main.py
3/AutomatizacionRobotizacion/Niryo/ned2/constants/: config.py
3/AutomatizacionRobotizacion/Niryo/ned2/framework/: framework.py
3/AutomatizacionRobotizacion/Niryo/ned2/practicas/: UIE WORKSPACE NED2.json
3/AutomatizacionRobotizacion/Niryo/ned2/robot/: robot.py  shapes.py
3/AutomatizacionRobotizacion/Niryo/niryo/: pyvenv.cfg
3/AutomatizacionRobotizacion/Niryo/pyniryo2-1.0.0/: README.rst  requirements.txt  setup.py
3/AutomatizacionRobotizacion/Niryo/pyniryo2-1.0.0/pyniryo2/: niryo_ros.py  niryo_topic.py  objects.py  robot_commander.py  utils.py
3/AutomatizacionRobotizacion/Niryo/pyniryo2-1.0.0/pyniryo2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
3/ComputerVision/Task3/: pyproject.toml
3/ComputerVision/Task3/Task3/: callback.py  dcgan.py  dcgan_emnist.py  model.py
3/ComputerVision/computer-vision/: pyproject.toml
(+1079 files in other folders)
