[project]
name = "advancedautomaticlearning"
version = "0.1.0"
description = ""
authors = [
    {name = "0xGeN02",email = "manuelmateodgl02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (>=1.6.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
