set(CMAKE_CXX_STANDARD 20 REQUIRED)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
target_compile_options(huffman PRIVATE -Wall -Wextra -pedantic -Werror)
add_library(huffmantree src/huffmantree.cpp)
target_include_directories(huffmantree PUBLIC ${PROJECT_SOURCE_DIR}/include)

add_executable(huffman src/main.cpp)
target_link_libraries(huffman PRIVATE huffmantree)
target_include_directories(huffman PUBLIC ${PROJECT_SOURCE_DIR}/include)
