[tool.poetry]
name = "gestion-salas"
version = "0.1.0"
description = "Gestor de salas de reunión"
authors = ["0xGeN02 <manuelmateodgl02@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
uvicorn = {version = "^0.32.1", extras = ["standard"]}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
python-dotenv = "^1.0.1"
asyncpg = "^0.30.0"
pydantic-settings = "^2.6.1"
pydantic = {extras = ["email"], version = "^2.10.3"}
databases = "^0.9.0"
httpx = "^0.28.0"
greenlet = "^3.1.1"
psycopg2 = "^2.9.10"
hypothesis = "^6.122.3"
pycryptodome = "^3.21.0"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.19"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"